# codebase

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  bootstrap_d.sh  bootstrap_r.sh  buntconfig.py  depends.txt  doxy.config.in
src/: CMakeLists.txt
src/ck_gtk/: CMakeLists.txt  README.md  eigen_cairo.cc  eigen_cairo.h  eigen_cairo_impl.h  layout_map.cc  layout_map.h  pan_zoom_view.cc  pan_zoom_view.h  simple_view.cc  simple_view.h
src/ckevent/: clock.h  event_loop.h
src/clarkson93/: CMakeLists.txt  bit_member.h  bit_member_test.cc  example_traits.h  example_traits2.h  horizon_ridge.h  indexed.h  p_queue.h  priority_queue.h  priority_queue_test.cc  simplex.h  simplex2.h  simplex2_impl.h  simplex3.h  simplex3_impl.h  simplex_impl.h  simplex_test.cc  stack_set.h  stack_set_test.cc  static_stack.h  triangulation.h  triangulation_impl.h  triangulation_test.cc  zip.h  zip_test.cc
src/clarkson93/dynamic/: simplex.h  simplex_impl.h  triangulation.h  triangulation_impl.h
src/cpp_fcgi/: CMakeLists.txt  README.md  Request.cpp  Request.h  Socket.cpp  Socket.h  cpp-fcgi.cpp  cpp_fcgi.h
src/cpp_fontconfig/: AssignmentPair.h  Atomic.cpp  Blanks.cpp  Blanks.h  CMakeLists.txt  CPtr.h  Cache.cpp  Cache.h  CharSet.cpp  CharSet.h  Config.cpp  Config.h  Constant.cpp  Constant.h  FontSet.cpp  FontSet.h  LangSet.cpp  LangSet.h  Matrix.cpp  Matrix.h  ObjectSet.cpp  ObjectType.cpp  Pattern.cpp  Pattern.h  README.md  StrList.cpp  StrList.h  StrSet.cpp  StrSet.h  String.cpp  TypeMap.cpp  common.cpp  common.h  file.cpp  file.h  freetype.cpp  init.cpp  init.h  macros.h  name.cpp  (+2 more)
src/cpp_freetype/: AssignmentPair.h  CMakeLists.txt  CPtr.h  Face.cpp  Face.h  GlyphSlot.cpp  GlyphSlot.h  Library.cpp  Memory.cpp  Memory.h  Module.cpp  ModuleClass.cpp  OpenArgs.cpp  Outline.cpp  README.md  RefPtr.h  Untag.cpp  Untag.h  cpp_freetype.cpp  types.h
src/cpp_nix/: CMakeLists.txt  clock.cc  clock_test.cc  epoll.cc  epoll.h  epoll_test.cc  fd_set.cc  fd_set.h  notify_pipe.cc  notify_pipe.h  notify_pipe_test.cc  select_set.cc  select_set.h  timespec.h  timeval.cc  timeval.h  timeval_test.cc
src/cpp_pthreads/: CMakeLists.txt  attr_api_test.cc  launch_join_test.cc
src/edelsbrunner96/: CMakeLists.txt  char_label_triangulation.h  edelsbrunner96.h  edelsbrunner96.hpp  example_traits.hpp  feature_walk_test.cc  induced_subcomplex.h  induced_subcomplex_test.cc  insert_test.cc  iterator_test.cc  iterators.h  iterators.hpp  line_walk_test.cc  simplex.h  simplex.hpp  simplex_distance_test.cc  simplex_test.cc  triangulation.h  triangulation_test.cc  visible_hull_test.cc
src/edelsbrunner96/demos/: CMakeLists.txt  barycentric_demo_2d.cc  barycentric_demo_2d.glade  demo_2d.cc  demo_2d.glade
src/fiber/: CMakeLists.txt  axis_angle_test.cc  demo.cc  euler_angles.h  identity.h  lvalue.h  normalize.h  ostream.h  quaternion.h  scale.h  scale_test.cc  stream_assignment.h  sum.h  sum_test.cc  view.h
src/gltk/: Buffer.cpp  Buffer.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  GLuintRef.h  Program.cpp  Program.h  RefCounted.cpp  RefCounted.h  RefPtr.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  buffer.cc  buffer.h  eventloop.cc  eventloop.h  eventloop_test.cc  events.cc  events.h  framebuffer.cc  framebuffer.h  gltk.h  gluintref.h  pipeline.cc  pipeline.h  program.cc  program.h  refcounted.cc  refcounted.h  refptr.h  shader.cc  shader.h  texture.cc  texture.h  vertexarray.cc  (+3 more)
src/gltk/test01/: CMakeLists.txt  main.cc  main.cpp  simple_fragment_shader.glslf
src/gltk/xlib/: CMakeLists.txt  translate_event.cc  translate_event.h  window.cc  window.h  window_demo.cc  xlib_window.cc  xlib_window.h  xlib_window_demo.cc
src/ide/: CMakeLists.txt  clang_render.cc  clang_style.css  editor_poc.cc  editor_template.html  header.html  make_cxx_string.py  string_to_argv.cc  string_to_argv.h
src/kd3/: CMakeLists.txt  enumerator.h  hyperrect.h  hyperrect_test.cc  kd2test.cpp  kdtree_test.cpp  kdtree_test2.cpp  listbuilder.h  listbuilder.hpp  listpair.h  nearestsearch.h  node.h  node.hpp  node_test.cc  rangesearch.h  traits.h  tree.h  tree.hpp  tree_test.cc
src/kd3/euclidean/: CMakeLists.txt  ball.h  ball.hpp  ballsearch.h  distance.h  distance.hpp  distance_test.cc  euclidean.cc  hyperrect.h  hyperrect.hpp  hyperrect_test.cc  key.h  knearest.h  knearest.hpp  knearestball.h  knearestball.hpp  knearestballcenter.h  knearestballcenter.hpp  nearest.h  nearest.hpp
src/kd3/r2_s1/: distance.h  distance.hpp  hyperrect.h  hyperrect.hpp  key.h  knearest.h  knearest.hpp  nearest.h  nearest.hpp
src/kevent/: CMakeLists.txt  clock.cc  eventloop.cc  eventloop.h  eventloop_test.cc  time.h
src/kwargs/: CMakeLists.txt  example_1.cc  example_2.cc  example_3.cc  example_4.cc  example_5.cc  example_6.cc  is_call_possible.h  kwargs.h  v1.h
src/mpblocks/: CMakeLists.txt  brown79.h  brown79.hpp  btps.h  cuda.h  cuda.hpp  gjk88.h  gtk.h  redblack.h  simplex_tree.h  simplex_tree.hpp
src/mpblocks/brown79/: CMakeLists.txt  inversion.h
src/mpblocks/btps/: CMakeLists.txt  example_traits.h  (+3 more)
src/openbookfs/: CMakeLists.txt  Marshall.cpp  Marshall.h  MessageBuffer.cpp  MessageBuffer.h  ReferenceCounted.h  message_map.pl  messages.cpp  messages.h  messages.proto
src/tabwm/: CMakeLists.txt  README.md  decorator.cc  tree.h  tree_test.cc  util.cc  util.h  window_manager.cc  xephyr_test.cc
src/tap/: CMakeLists.txt  actions.cc  actions.h  common.cc  common.h  container_id.h  container_id_test.cc  hash.h  is_container_test.cc  kwarg_test.cc  kwargs.h  tap.cc  tap.h  tap_common.cc  tap_common.h  tap_demo.cc  tap_test.cc  value_consumer.h  value_consumer_test.cc  value_parser_test.cc  value_parsers.cc  value_parsers.h
src/throttle/: CMakeLists.txt  messages.h  pthrottle.cc  ptrace_demo.cc  sample.json  server.cc  syscall.cc  syscall.h
test/cpp_fcgi/: CMakeLists.txt  main.cpp
test/cpp_fontconfig/: CMakeLists.txt  tutorial.cpp
test/cpp_nix/: CMakeLists.txt
test/gltk/: CMakeLists.txt
test/mpblocks/: CMakeLists.txt  brown79_test.cc  redblack_test.cc
test/tabwm/: CMakeLists.txt  xephyr_test.cc
(+668 files in other folders)
