add_subdirectory(ck_gtk)
add_subdirectory(cpp_fcgi)
add_subdirectory(cpp_fontconfig)
add_subdirectory(cpp_freetype)
add_subdirectory(cpp_nix)
add_subdirectory(cpp_pthreads)
add_subdirectory(edelsbrunner96)
add_subdirectory(fiber)
add_subdirectory(gltk)
add_subdirectory(kd3)
add_subdirectory(kwargs)
add_subdirectory(mpblocks)
add_subdirectory(openbookfs)
add_subdirectory(tabwm)
