add_subdirectory(btps)
add_subdirectory(dubins)
add_subdirectory(linalg)
add_subdirectory(util)

if(eigen3_FOUND)
  include_directories(${eigen3_INCLUDE_DIRS})
  cc_test(brown79_test brown79_test.cc)
else()
  message(WARNING "wont build brown79_test")
endif()

if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  cc_test(redblack_test redblack_test.cc)
  target_link_libraries(redblack_test
                        mpblocks_util)
else()
  message(WARNING "wont build redblack_test" )
endif()